--- a/3_1.ipynb
+++ b/3_1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "48b1bcb2-c1ed-4017-9137-7dbcf7e75e87",
    "metadata": {},
    "outputs": [],
@@ -30,41 +30,14 @@
    "execution_count": 3,
    "id": "96365205-d2e8-47fa-bdbd-dc7bbd05b3ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 51531)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\anaconda3\\envs\\pyspark_env\\lib\\socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"C:\\ProgramData\\anaconda3\\envs\\pyspark_env\\lib\\socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"C:\\ProgramData\\anaconda3\\envs\\pyspark_env\\lib\\socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"C:\\ProgramData\\anaconda3\\envs\\pyspark_env\\lib\\socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"C:\\spark-3.5.6-bin-hadoop3\\python\\pyspark\\accumulators.py\", line 295, in handle\n",
-      "    poll(accum_updates)\n",
-      "  File \"C:\\spark-3.5.6-bin-hadoop3\\python\\pyspark\\accumulators.py\", line 267, in poll\n",
-      "    if self.rfile in r and func():\n",
-      "  File \"C:\\spark-3.5.6-bin-hadoop3\\python\\pyspark\\accumulators.py\", line 271, in accum_updates\n",
-      "    num_updates = read_int(self.rfile)\n",
-      "  File \"C:\\spark-3.5.6-bin-hadoop3\\python\\pyspark\\serializers.py\", line 594, in read_int\n",
-      "    length = stream.read(4)\n",
-      "  File \"C:\\ProgramData\\anaconda3\\envs\\pyspark_env\\lib\\socket.py\", line 717, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "ConnectionResetError: [WinError 10054] An existing connection was forcibly closed by the remote host\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "spark = SparkSession.builder.appName(\"MyAppFromNotebook\").master(\"local[*]\").config(\"spark.executor.memory\", \"2g\").config(\"spark.driver.memory\", \"1g\").getOrCreate()\n",
+    "# spark = SparkSession.builder.appName(\"MyAppFromNotebook\").master(\"local[*]\").config(\"spark.executor.memory\", \"2g\").config(\"spark.driver.memory\", \"1g\").getOrCreate()\n",
+    "# sc = spark.sparkContext\n",
+    "\n",
+    "spark = SparkSession.builder.appName(\"ScalaToPySpark\").getOrCreate()\n",
     "sc = spark.sparkContext"
    ]
   },
@@ -89,13 +62,13 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>MyAppFromNotebook</code></dd>\n",
+       "                <dd><code>ScalaToPySpark</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        "
       ],
       "text/plain": [
-       "<SparkContext master=local[*] appName=MyAppFromNotebook>"
+       "<SparkContext master=local[*] appName=ScalaToPySpark>"
       ]
      },
      "execution_count": 4,
@@ -117,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20872 Jps\n",
-      "18220 SparkSubmit\n",
+      "23464 Jps\n",
+      "17420 SparkSubmit\n",
       "\n"
      ]
     }
@@ -439,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "e52e1691-12c5-43c5-ad60-cf29472669b1",
    "metadata": {},
    "outputs": [
@@ -449,18 +422,18 @@
        "PythonRDD[31] at RDD at PythonRDD.scala:53"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "errorFile.persist(StorageLevel.MEMORY_ONLY)\n"
+    "errorFile.persist(StorageLevel.MEMORY_ONLY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "02d98655-9c5e-4455-a18c-02c93baf46b0",
    "metadata": {},
    "outputs": [
@@ -470,7 +443,7 @@
        "27"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "23676a15-d281-45f1-9243-11d7a00e2c38",
    "metadata": {},
    "outputs": [],
@@ -491,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "9771fcef-6a63-444f-81c4-3aaba7c0ede5",
    "metadata": {},
    "outputs": [
@@ -501,7 +474,7 @@
        "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "7a298fd6-c708-453d-8024-7fcdcd5a74ec",
    "metadata": {},
    "outputs": [],
@@ -522,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "f9155cba-3e22-4ba0-a545-6dbc345a08e8",
    "metadata": {},
    "outputs": [
@@ -532,7 +505,7 @@
        "4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "a664b748-720d-4277-abb9-059f5cc69920",
    "metadata": {},
    "outputs": [],
@@ -553,8 +526,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "81f5c363-2eb6-4087-a85b-b350b3abdcea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DISK_ONLY', 'DISK_ONLY_2', 'DISK_ONLY_3', 'MEMORY_AND_DISK', 'MEMORY_AND_DISK_2', 'MEMORY_AND_DISK_DESER', 'MEMORY_ONLY', 'MEMORY_ONLY_2', 'NONE', 'OFF_HEAP', '__annotations__', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(StorageLevel)) #Can use if the storage level which exists in this list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7fe90d95-94cf-4dee-87d0-746074018025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PythonRDD[31] at RDD at PythonRDD.scala:53"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errorFile.unpersist(True) # If we want to change the StorageLevel to other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "317c4f27-f92b-4294-9d49-fd5bf1a5c577",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PythonRDD[31] at RDD at PythonRDD.scala:53"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errorFile.persist(StorageLevel.MEMORY_AND_DISK)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9fb9d76-43ea-4239-8b2a-3c3a46866c7d",
    "metadata": {},
    "outputs": [],
    "source": []
